<?xml version="1.0"?>
<package format="2">
  <name>gpu_voxels_ros</name>
  <version>0.0.0</version>
  <description>The gpu_voxels_ros package</description>

  <maintainer email="mfinean@robots.ox.ac.uk">Mark Finean</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>icl_core</build_depend>
  <build_depend>gpu_voxels</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>ompl</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>icl_core</build_export_depend>
  <build_export_depend>gpu_voxels</build_export_depend>
  <build_export_depend>PCL</build_export_depend>
  <build_export_depend>ompl</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>icl_core</exec_depend>
  <exec_depend>gpu_voxels</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>ompl</exec_depend>



  <export>

  </export>
</package>
